fixed media query to set width automatically on mobile devices

--- a/client/src/css/project.css
+++ b/client/src/css/project.css
@@ -29,8 +29,7 @@
 @media only screen and (max-width: 768px) {
 	/* For mobile phones: */
 	.projects {
-		display: flex;
-		flex-direction: column;
+		width: auto
 	}
   }
 .centered-container
